add traefik labels

--- a/charts/jenkins/values.yaml
+++ b/charts/jenkins/values.yaml
@@ -705,16 +705,18 @@ controller:
     # -- Ingress labels
     labels: {}
     # -- Ingress annotations
-    annotations: {}
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
+    annotations:
+      traefik.ingress.kubernetes.io/router.entrypoints: web
+      traefik.ingress.kubernetes.io/router.priority: "10"
+      kubernetes.io/ingress.class: traefik
     # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
     # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
     # ingressClassName: nginx
 
     # Set this path to jenkinsUriPrefix above or use annotations to rewrite path
     # -- Ingress path
-    path:
+    path: "/jenkins"
+    pathType: Prefix
 
     # configures the hostname e.g. jenkins.example.com
     # -- Ingress hostname
