--- a/charts/jenkins/values.yaml
+++ b/charts/jenkins/values.yaml
@@ -684,7 +684,7 @@ controller:
 
   ingress:
     # -- Enables ingress
-    enabled: false
+    enabled: true
 
     # Override for the default paths that map requests to the backend
     # -- Override for the default Ingress paths
