--- a/charts/jenkins/values.yaml
+++ b/charts/jenkins/values.yaml
@@ -957,9 +957,9 @@ agent:
   jnlpregistry:
   image:
     # -- Repository to pull the agent jnlp image from
-    repository: "jenkinsci/blueocean"
+    repository: "jenkins/inbound-agent"
     # -- Tag of the image to pull
-    tag: "latest"
+    tag: "3261.v9c670a_4748a_9-1"
   # -- Configure working directory for default agent
   workingDir: "/home/jenkins/agent"
   nodeUsageMode: "NORMAL"
@@ -1019,10 +1019,10 @@ agent:
   # Configure the attributes as they appear in the corresponding Java class for that type
   # https://github.com/jenkinsci/kubernetes-plugin/tree/master/src/main/java/org/csanchez/jenkins/plugins/kubernetes/volumes
   # -- Additional volumes
-  volumes: []
-  # - type: ConfigMap
-  #   configMapName: myconfigmap
-  #   mountPath: /var/myapp/myconfigmap
+  volumes:
+    - name: docker-sock
+      hostPath:
+        path: /var/run/docker.sock
   # - type: EmptyDir
   #   mountPath: /var/myapp/myemptydir
   #   memory: false
@@ -1181,22 +1181,18 @@ agent:
   # controller.JCasC.defaultConfig: true
   # Best reference is https://<jenkins_url>/configuration-as-code/reference#Cloud-kubernetes. The example below creates a python pod template.
   # -- Configures extra pod templates for the default kubernetes cloud
-  podTemplates: {}
-  #  python: |
-  #    - name: python
-  #      label: jenkins-python
-  #      serviceAccount: jenkins
-  #      containers:
-  #        - name: python
-  #          image: python:3
-  #          command: "/bin/sh -c"
-  #          args: "cat"
-  #          ttyEnabled: true
-  #          privileged: true
-  #          resourceRequestCpu: "400m"
-  #          resourceRequestMemory: "512Mi"
-  #          resourceLimitCpu: "1"
-  #          resourceLimitMemory: "1024Mi"
+  podTemplates:
+    - name: docker
+        label: docker
+        containers:
+          - name: docker
+            image: docker:latest
+            command:
+              - cat
+            tty: true
+            volumeMounts:
+              - name: docker-sock
+                mountPath: /var/run/docker.sock
 
 # Inherits all values from `agent` so you only need to specify values which differ
 # -- Configure additional
