--- a/charts/jenkins/values.yaml
+++ b/charts/jenkins/values.yaml
@@ -1019,10 +1019,7 @@ agent:
   # Configure the attributes as they appear in the corresponding Java class for that type
   # https://github.com/jenkinsci/kubernetes-plugin/tree/master/src/main/java/org/csanchez/jenkins/plugins/kubernetes/volumes
   # -- Additional volumes
-  volumes:
-    - name: docker-sock
-      hostPath:
-        path: /var/run/docker.sock
+  volumes: []
   # - type: EmptyDir
   #   mountPath: /var/myapp/myemptydir
   #   memory: false
@@ -1181,18 +1178,7 @@ agent:
   # controller.JCasC.defaultConfig: true
   # Best reference is https://<jenkins_url>/configuration-as-code/reference#Cloud-kubernetes. The example below creates a python pod template.
   # -- Configures extra pod templates for the default kubernetes cloud
-  podTemplates:
-    - name: docker
-      label: docker
-      containers:
-        - name: docker
-          image: docker:latest
-          command:
-            - cat
-          tty: true
-          volumeMounts:
-            - name: docker-sock
-              mountPath: /var/run/docker.sock
+  podTemplates: []
 
 # Inherits all values from `agent` so you only need to specify values which differ
 # -- Configure additional
